[package]
name = "acc_skinmanager"
version = "0.1.0"
edition = "2021"
build = "build.rs"
description = "A tool for streamlining managing and creating acc liveries"

[build-dependencies]
winres = "0.1"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fltk = { version = "^1.3", features = ["fltk-bundled"] }
fltk-table = "^0.2"
json = "^0.12"
serde = { version = "^1", features = ["derive"]}
serde_json = "^1"
clap = { version = "^4", features = ["derive"]}
zip = "^0.6"
zip-extensions = "^0.6"
dirs = "^4.0"
futures = "^0.3"
chrono = "^0.4"